2007-03-25  OHASHI Akira  <bg66@koka-in.org>

	* INSTALL-CVS: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2007-03-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-closed-regexp): Fix regexp.
	(mixi-diary-owner-nick-regexp): Ditto.
	(mixi-diary-time-regexp): Ditto.
	(mixi-diary-title-regexp): Ditto.
	(mixi-diary-content-regexp): Ditto.
	(mixi-realize-diary): Follow the change above.
	(mixi-event-community-regexp): Fix regexp.
	(mixi-event-time-regexp): Ditto.
	(mixi-event-title-regexp): Ditto.
	(mixi-event-owner-regexp): Ditto.
	(mixi-event-owner-seceded-regexp): Ditto.
	(mixi-event-date-regexp): Ditto.
	(mixi-event-place-regexp): Ditto.
	(mixi-event-detail-regexp): Ditto.
	(mixi-event-limit-regexp): Ditto.
	(mixi-event-members-regexp): Ditto.
	(mixi-realize-event): Follow the change above.

2007-03-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-community-name-regexp): Fix regexp.
	(mixi-community-birthday-regexp): Ditto.
	(mixi-community-owner-regexp): Ditto.
	(mixi-community-category-regexp): Ditto.
	(mixi-community-members-regexp): Ditto.
	(mixi-community-open-level-regexp): Ditto.
	(mixi-community-authority-regexp): Ditto.
	(mixi-community-description-regexp): Ditto.
	(mixi-realize-community): Follow the change above.

2007-03-19  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-content-regexp): Fix regexp.

2007-03-19  OHASHI Akira  <bg66@koka-in.org>

	* mixi-gnus.el: Use `require' instead of `autoload'.
	* mixi-wl.el: Ditto.
	* riece-mixi.el: Ditto.

	* acinclude.m4 (AC_CHECK_GNUS): New function.
	(AC_CHECK_WL): Ditto.
	* configure.ac: Use them.
	(HAVE_GNUS): New condition.
	(HAVE_WL): Ditto.
	* Makefile.am (MODULES_GNUS): New variable.
	(MODULES_WL): Ditto.
	(MODULES_SHIMBUN): Follow the change above.
	(EXTRA_DIST): Ditto.
	(MODULES): Ditto.

2007-03-17  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mixi-utils.el (toplevel): Specify the file coding system.

	* mixi.el (toplevel): Ditto.